# embedme

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  example.ipynb  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
embedme/: __init__.py  embedme.py
examples/: example.ipynb
tests/: __init__.py  test_embedme.py
