[tool.poetry]
name = "new"
version = "0.1.0"
description = ""
authors = ["John Partee <morganpartee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.1"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
